--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,12 @@
     height: 100vh;
     background-color: #f1f1f1;
 }
+
+.roboto {
+    font-family: 'Roboto', sans-serif;
+}
+
+h1{
+    font-size: 2.5rem;
+    color: #333;
+}
